@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12517 2006/01/15 06:01:57 uebayasi Exp $
+$NetBSD: CHANGES,v 1.12518 2006/01/15 07:40:42 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -300,3 +300,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated net/mDNSResponder to 107.5 [wiz 2006-01-15]
 	Added devel/mercurial version 0.7 [wiz 2006-01-15]
 	Updated misc/elscreen to 1.4.3 [uebayasi 2006-01-15]
+	Updated lang/perl5 to 5.8.7nb8 [jlam 2006-01-15]
